CAR-1035: Fix feature title on mobile

--- a/WebContent/framework/modules/less/lmi/results.less
+++ b/WebContent/framework/modules/less/lmi/results.less
@@ -76,6 +76,10 @@
 
     // Normal heading
     .labelInColumn {
+      &.expandable .content {
+        padding-right: 38px;
+      }
+
       .content {
         color: contrast(@feature-odd-bg-color);
         background: @feature-odd-bg-color;
